--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>P2P Chat</title>
+  <title>Beat</title>
   <style>
     body {
       font-family: Arial, sans-serif;
