--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </style>
 </head>
 <body>
-  <h1>P2P Chat</h1>
+  <h1>Beat</h1>
   <div id="chat-container"></div>
   <textarea id="message-input" placeholder="Type your message..."></textarea>
 
