--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     }
   </script>
 </body>
+    <h1>Welcome to Beat Streaming!</h1>
   <video controls>
     <source src="/stream" type="video/mp4">
   </video>
