--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </body>
     <h1>Welcome to Beat Streaming!</h1>
   <video controls>
-    <source src="/stream/welcome to the beat streming" type="video/mp4">
+    <source src="/stream/Welcome to the beat streaming" type="video/welcome to the beat streaming.mp4">
   </video>
 </body>
 </html>
